--- a/index.html
+++ b/index.html
@@ -8,22 +8,14 @@
     <meta name="description"
         content="Wawanzone - Jasa pembuatan website profesional di Yogyakarta. Kami menyediakan layanan pengembangan website yang responsif, modern dan SEO-friendly untuk bisnis Anda. Hubungi kami untuk konsultasi gratis.">
     <meta name="keyword"
-        content="jasa pembuatan website, web developer yogyakarta, jasa website profesional, pengembangan website, website bisnis, website company profile, website toko online, website responsif, web design">
-
-    <head>
-        <meta charset="UTF-8">
-        <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>Wawanzone Web Developer</title>
-        <meta name="description" content="Wawanzone Web Developer">
-        <meta name="keyword"
-            content="jasa foto, fotografer, fotografi, prewedding, prewed, nikah, nikahan, pernikahan, wedding, dokumentasi, acara, event, ultah, ulang tahun, ibu hamil, maternity, keluarga family, bayi, baby, anak, indoor, outdoor, photography, photo, photographer, produk">
-        <link rel="stylesheet" href="https://preline.co/assets/css/main.min.css?v=2.5.0">
-        <link rel="shortcut icon" href="img/favicon.ico" />
-        <link rel="apple-touch-icon" sizes="180x180" href="img/apple-touch-icon.png">
-        <link rel="icon" type="image/png" sizes="32x32" href="img/favicon-32x32.png">
-        <link rel="icon" type="image/png" sizes="16x16" href="img/favicon-16x16.png">
-        <link rel="manifest" href="img/site.webmanifest">
-    </head>
+        content="jasa foto, fotografer, fotografi, prewedding, prewed, nikah, nikahan, pernikahan, wedding, dokumentasi, acara, event, ultah, ulang tahun, ibu hamil, maternity, keluarga family, bayi, baby, anak, indoor, outdoor, photography, photo, photographer, produk">
+    <link rel="stylesheet" href="https://preline.co/assets/css/main.min.css?v=2.5.0">
+    <link rel="shortcut icon" href="img/favicon.ico" />
+    <link rel="apple-touch-icon" sizes="180x180" href="img/apple-touch-icon.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="img/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="img/favicon-16x16.png">
+    <link rel="manifest" href="img/site.webmanifest">
+</head>
 
 
 <body
@@ -74,7 +66,7 @@
                     class="overflow-hidden overflow-y-auto max-h-[75vh] [&::-webkit-scrollbar]:w-2 [&::-webkit-scrollbar-thumb]:rounded-full [&::-webkit-scrollbar-track]:bg-gray-100 [&::-webkit-scrollbar-thumb]:bg-gray-300">
                     <div class="py-2 md:py-0 flex flex-col md:flex-row md:items-center md:justify-end gap-0.5 md:gap-1">
                         <button
-                            class="p-2 flex items-center text-sm text-gray-800 hover:text-gray-500 focus:outline-none focus:text-gray-500"
+                            class="p-2 flex hidden items-center text-sm text-gray-800 hover:text-gray-500 focus:outline-none focus:text-gray-500"
                             aria-haspopup="dialog" aria-expanded="false" aria-controls="race-game"
                             data-hs-overlay="#race-game">
                             <svg class="shrink-0 size-4 me-3 md:me-2 block md:hidden" xmlns="http://www.w3.org/2000/svg"
