--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 
 
 <body
-    class="antialiased bg-gradient-to-b from-slate-100 to-white/10 via-white/0 h-screen flex flex-col justify-between  ">
+    class="antialiased bg-gradient-to-b from-indigo-500 from-10% via-white via-30% to-emerald-500 to-90%  h-screen flex flex-col justify-between  ">
     <!-- ========== HEADER ========== -->
     <header class="border-gray-200 flex text-sm flex-wrap md:justify-start md:flex-nowrap z-50 w-full">
         <nav
@@ -1088,84 +1088,77 @@
 
         type(); // Memulai efek mengetik
     </script>
-    <script>
-        async function removeBackground(imageFile) {
-            const formData = new FormData();
-            formData.append('file', imageFile); // Ensure this matches the API's requirements
+        <script>
+  async function removeBackground(imageFile) {
+    const formData = new FormData();
+    formData.append('file', imageFile);
 
-            const requestOptions = {
-                method: 'POST',
-                body: formData
-            };
+    const loader = document.getElementById('loader');
+    loader.classList.remove('hidden');
 
-            const loader = document.getElementById('loader');
-            loader.classList.remove('hidden');
+    try {
+      const res = await fetch('https://api.zpi.my.id/v1/utility/remove-bg', {
+        method: 'POST',
+        body: formData
+      });
 
-            try {
-                const response = await fetch("https://api.zpi.my.id/v1/utility/bg-remover/image", requestOptions);
+      const data = await res.json();
+      console.log("API Response:", data);
 
-                if (!response.ok) {
-                    const errorText = await response.text();
-                    throw new Error(`HTTP Error: ${response.status}, Detail: ${errorText}`);
-                }
+      // Gunakan struktur data yang sesuai
+      const imageUrl = data?.response?.image?.preview;
 
-                const data = await response.json();
-                console.log("API Response:", data); // Log the API response to inspect it
+      if (!imageUrl) {
+        throw new Error("Image preview URL not found in response.");
+      }
 
-                // Check if the API response has the expected data
-                if (data.status !== 200 || !data.data || !data.data.bg_removed) {
-                    throw new Error("Unexpected API response structure.");
-                }
+      const resultImg = document.getElementById("result-image");
+      resultImg.src = imageUrl;
 
-                // Get the background-removed image URL
-                const imageUrl = data.data.bg_removed;
+      const downloadButton = document.getElementById("download-button");
+      downloadButton.href = imageUrl;
+      downloadButton.download = "image-no-bg.png";
+      downloadButton.classList.remove("hidden");
 
-                // Update the result image and download button
-                const resultImg = document.getElementById("result-image");
-                resultImg.src = imageUrl;
+    } catch (error) {
+      console.error("An error occurred:", error);
+      alert(`An error occurred: ${error.message}`);
+    } finally {
+      loader.classList.add('hidden');
+    }
+  }
 
-                const downloadButton = document.getElementById("download-button");
-                downloadButton.href = imageUrl;
-                downloadButton.download = "image-no-bg.png";
-                downloadButton.classList.remove("hidden");
+  const dropZone = document.getElementById('drop-zone');
+  const uploadInput = document.getElementById('upload-image');
 
-            } catch (error) {
-                console.error("An error occurred:", error);
-                alert(`An error occurred: ${error.message}`);
-            } finally {
-                loader.classList.add('hidden');
-            }
-        }
+  dropZone.addEventListener('dragover', (event) => {
+    event.preventDefault();
+    dropZone.classList.add('border-blue-500');
+  });
 
-        // Event listener for dragover
-        document.getElementById('drop-zone').addEventListener('dragover', (event) => {
-            event.preventDefault();
-            event.currentTarget.classList.add('border-blue-500');
-        });
+  dropZone.addEventListener('dragleave', () => {
+    dropZone.classList.remove('border-blue-500');
+  });
 
-        // Event listener for dragleave
-        document.getElementById('drop-zone').addEventListener('dragleave', (event) => {
-            event.currentTarget.classList.remove('border-blue-500');
-        });
+  dropZone.addEventListener('drop', (event) => {
+    event.preventDefault();
+    dropZone.classList.remove('border-blue-500');
+    const imageFile = event.dataTransfer.files[0];
+    if (imageFile) {
+      removeBackground(imageFile);
+    }
+  });
 
-        // Event listener for drop event
-        document.getElementById('drop-zone').addEventListener('drop', (event) => {
-            event.preventDefault();
-            event.currentTarget.classList.remove('border-blue-500');
-            const imageFile = event.dataTransfer.files[0];
-            if (imageFile) {
-                removeBackground(imageFile);
-            }
-        });
+  uploadInput.addEventListener('change', (event) => {
+    const imageFile = event.target.files[0];
+    if (imageFile) {
+      removeBackground(imageFile);
+    }
+  });
+</script>
 
-        // Event listener for file input change
-        document.getElementById('upload-image').addEventListener('change', (event) => {
-            const imageFile = event.target.files[0];
-            if (imageFile) {
-                removeBackground(imageFile);
-            }
-        });
-    </script>
+    
+    
     <!-- <script>
         document.getElementById("checkButton").addEventListener("click", async function () {
             const text = document.getElementById("inputText").value;
