--- a/order-hosting.html
+++ b/order-hosting.html
@@ -373,7 +373,7 @@
                                                 google dengan SSL https://
                                                 </span>
                                                 <span id="add-checkbox-ssl-description"
-                                                    class="block text-sm text-gray-400" data-harga="109.900">Rp109.900/ per 1 tahun
+                                                    class="block text-sm text-gray-400" data-harga="109.900">Rp109.900/tahun
                                                 </span>
                                                 </label>
                                             </div>
@@ -390,7 +390,7 @@
                                                 Backup <span
                                                     class="inline-flex items-center gap-x-1.5 py-1 px-2 rounded-lg text-xs font-medium bg-blue-100 text-blue-800">New</span></span>
                                                 <span id="add-checkbox-backup-description"
-                                                    class="block text-sm text-gray-400" data-harga="29.9000">Rp29.900/bulan</span>
+                                                    class="block text-sm text-gray-400" data-harga="358800">Rp29.900/bulan</span>
                                                 </label>
                                             </div>
                                             <div
@@ -437,7 +437,7 @@
                                                 Services
                                                 Top</span>
                                                 <span id="add-checkbox-top-description"
-                                                    class="block text-sm text-gray-400" data-harga="39900">Rp39.900/bulan</span>
+                                                    class="block text-sm text-gray-400" data-harga="478800">Rp39.900/bulan</span>
                                                 </label>
                                             </div>
                                             <div
@@ -452,7 +452,7 @@
                                                 Services
                                                 Max</span>
                                                 <span id="add-checkbox-max-description"
-                                                    class="block text-sm text-gray-400" data-harga="99900">Rp99.900/bulan</span>
+                                                    class="block text-sm text-gray-400" data-harga="1188000">Rp99.900/bulan</span>
                                                 </label>
                                             </div>
                                         </div>
