--- a/index.html
+++ b/index.html
@@ -808,7 +808,7 @@
         <div
             class="hs-overlay-open:mt-0 hs-overlay-open:opacity-100 hs-overlay-open:duration-500 m  transition-all max-w-full max-h-full h-full">
             <div
-                class="flex flex-col bg-gradient-to-b from-white to-white/0 via-white/90 pointer-events-auto max-w-full max-h-full h-full">
+                class="flex flex-col bg-white pointer-events-auto max-w-full max-h-full h-full">
                 <div class="flex max-w-6xl mx-auto w-full justify-between items-center py-3 px-6 border-b">
                     <div class="flex gap-4 items-center">
                         <a class=" font-semibold text-base text-black focus:outline-none focus:opacity-80 flex gap-4 items-center"
@@ -858,7 +858,7 @@
         <div
             class="hs-overlay-open:mt-0 hs-overlay-open:opacity-100 hs-overlay-open:duration-500 m  transition-all max-w-full max-h-full h-full">
             <div
-                class="flex flex-col bg-gradient-to-b from-white to-white/0 via-white/90 pointer-events-auto max-w-full max-h-full h-full">
+                class="flex flex-col bg-white pointer-events-auto max-w-full max-h-full h-full">
                 <div class="flex max-w-6xl mx-auto w-full justify-between items-center py-3 px-6 border-b">
                     <div class="flex gap-4 items-center">
                         <a class=" font-semibold text-base text-black focus:outline-none focus:opacity-80 flex gap-4 items-center"
@@ -921,7 +921,7 @@
         <div
             class="hs-overlay-open:mt-0 hs-overlay-open:opacity-100 hs-overlay-open:duration-500 m  transition-all max-w-full max-h-full h-full">
             <div
-                class="flex flex-col bg-gradient-to-b from-white to-white/0 via-white/90 pointer-events-auto max-w-full max-h-full h-full">
+                class="flex flex-col bg-white pointer-events-auto max-w-full max-h-full h-full">
                 <div class="flex max-w-6xl mx-auto w-full justify-between items-center py-3 px-6 border-b">
                     <div class="flex gap-4 items-center">
                         <a class=" font-semibold text-base text-black focus:outline-none focus:opacity-80 flex gap-4 items-center"
