pindah asset js

--- a/merid1/dashboard.html
+++ b/merid1/dashboard.html
@@ -646,6 +646,6 @@
                 </div>
             </div>
         </div>
-        <script src="node_modules/preline/preline.js"></script>
+        <script src="assets/js/preline.js"></script>
     </body>
 </html>
