--- a/merid1/setting.html
+++ b/merid1/setting.html
@@ -128,7 +128,7 @@
                     </div>
                     <div class="grid md:grid-cols-2 gap-8">
                         <div class="theme">
-                            <div class="border-[7px] mr-auto prev-box border-black rounded-3xl w-[250px] overflow-y-scroll relative h-[450px]">
+                            <div class="border-[7px] mr-auto prev-box border-black rounded-3xl w-[250px] no-scrollbar overflow-y-auto relative h-[450px]">
                                 <div class="absolute inset-0 z-10 bg-gradient-to-t from-black to-black/0 via-black/0 p-2">
                                     <div class="text-center  text-white absolute inset-x-0 bottom-5 ">
                                         <div class="mb-auto">
