--- a/merid1/dashboard.html
+++ b/merid1/dashboard.html
@@ -138,8 +138,9 @@
                                         <option>VIP</option>
                                     </select>
                                     <select class="py-2 px-3 pe-9 w-full md:w-28 block border-gray-200 rounded-full text-sm focus:border-theme-500 focus:ring-theme-500 disabled:opacity-50 disabled:pointer-events-none">
-                                        <option selected="">Sesi 1</option>
-                                        <option>Sesi 2</option>
+                                        <option selected="">Akad</option>
+                                        <option>Resepsi</option>
+                                        <option>Ngunduh Mantu</option>
                                     </select>
                                 </div>
                                 <div class="whitespace-nowrap sm:pt-0 grid sm:block max-md:w-full">
@@ -341,7 +342,7 @@
                                             </td>
                                             <td class="size-px whitespace-nowrap">
                                                 <div class="px-6 py-3 flex gap-1 items-center ">
-                                                    <span class="text-sm text-gray-500">13.00 - 15.00</span>
+                                                    <span class="text-sm text-gray-500">Akad</span>
                                                 </div>
                                             </td>
                                             <td class="h-px w-72 whitespace-nowrap">
@@ -419,7 +420,7 @@
                                             </td>
                                             <td class="size-px whitespace-nowrap">
                                                 <div class="px-6 py-3 flex gap-1 items-center ">
-                                                    <span class="text-sm text-gray-500">11.00 - 13.00</span>
+                                                    <span class="text-sm text-gray-500">Resepsi</span>
                                                 </div>
                                             </td>
                                             <td class="h-px w-72 whitespace-nowrap">
@@ -485,7 +486,7 @@
                                             </td>
                                             <td class="size-px whitespace-nowrap">
                                                 <div class="px-6 py-3 flex gap-1 items-center ">
-                                                    <span class="text-sm text-gray-500">13.00 - 15.00</span>
+                                                    <span class="text-sm text-gray-500">Akad</span>
                                                 </div>
                                             </td>
                                             <td class="h-px w-72 whitespace-nowrap">
@@ -556,7 +557,7 @@
                                             </td>
                                             <td class="size-px whitespace-nowrap">
                                                 <div class="px-6 py-3 flex gap-1 items-center ">
-                                                    <span class="text-sm text-gray-500">11.00 - 13.00</span>
+                                                    <span class="text-sm text-gray-500">Akad</span>
                                                 </div>
                                             </td>
                                             <td class="h-px w-72 whitespace-nowrap">
@@ -622,7 +623,7 @@
                                             </td>
                                             <td class="size-px whitespace-nowrap">
                                                 <div class="px-6 py-3 flex gap-1 items-center ">
-                                                    <span class="text-sm text-gray-500">11.00 - 13.00</span>
+                                                    <span class="text-sm text-gray-500">Resepsi</span>
                                                 </div>
                                             </td>
                                             <td class="h-px w-72 whitespace-nowrap">
@@ -688,7 +689,7 @@
                                             </td>
                                             <td class="size-px whitespace-nowrap">
                                                 <div class="px-6 py-3 flex gap-1 items-center ">
-                                                    <span class="text-sm text-gray-500">11.00 - 13.00</span>
+                                                    <span class="text-sm text-gray-500">Resepsi</span>
                                                 </div>
                                             </td>
                                             <td class="h-px w-72 whitespace-nowrap">
@@ -754,7 +755,7 @@
                                             </td>
                                             <td class="size-px whitespace-nowrap">
                                                 <div class="px-6 py-3 flex gap-1 items-center ">
-                                                    <span class="text-sm text-gray-500">11.00 - 13.00</span>
+                                                    <span class="text-sm text-gray-500">Resepsi</span>
                                                 </div>
                                             </td>
                                             <td class="h-px w-72 whitespace-nowrap">
@@ -825,7 +826,7 @@
                                             </td>
                                             <td class="size-px whitespace-nowrap">
                                                 <div class="px-6 py-3 flex gap-1 items-center ">
-                                                    <span class="text-sm text-gray-500">11.00 - 13.00</span>
+                                                    <span class="text-sm text-gray-500">Ngunduh</span>
                                                 </div>
                                             </td>
                                             <td class="h-px w-72 whitespace-nowrap">
@@ -891,7 +892,7 @@
                                             </td>
                                             <td class="size-px whitespace-nowrap">
                                                 <div class="px-6 py-3 flex gap-1 items-center ">
-                                                    <span class="text-sm text-gray-500">11.00 - 13.00</span>
+                                                    <span class="text-sm text-gray-500">Resepsi</span>
                                                 </div>
                                             </td>
                                             <td class="h-px w-72 whitespace-nowrap">
@@ -957,7 +958,7 @@
                                             </td>
                                             <td class="size-px whitespace-nowrap">
                                                 <div class="px-6 py-3 flex gap-1 items-center ">
-                                                    <span class="text-sm text-gray-500">11.00 - 13.00</span>
+                                                    <span class="text-sm text-gray-500">Resepsi</span>
                                                 </div>
                                             </td>
                                             <td class="h-px w-72 whitespace-nowrap">
@@ -1028,7 +1029,7 @@
                                             </td>
                                             <td class="size-px whitespace-nowrap">
                                                 <div class="px-6 py-3 flex gap-1 items-center ">
-                                                    <span class="text-sm text-gray-500">11.00 - 13.00</span>
+                                                    <span class="text-sm text-gray-500">Resepsi</span>
                                                 </div>
                                             </td>
                                             <td class="h-px w-72 whitespace-nowrap">
@@ -1094,7 +1095,7 @@
                                             </td>
                                             <td class="size-px whitespace-nowrap">
                                                 <div class="px-6 py-3 flex gap-1 items-center ">
-                                                    <span class="text-sm text-gray-500">11.00 - 13.00</span>
+                                                    <span class="text-sm text-gray-500">Resepsi</span>
                                                 </div>
                                             </td>
                                             <td class="h-px w-72 whitespace-nowrap">
@@ -1164,7 +1165,7 @@
                                             </td>
                                             <td class="size-px whitespace-nowrap">
                                                 <div class="px-6 py-3 flex gap-1 items-center ">
-                                                    <span class="text-sm text-gray-500">11.00 - 13.00</span>
+                                                    <span class="text-sm text-gray-500">Resepsi</span>
                                                 </div>
                                             </td>
                                             <td class="h-px w-72 whitespace-nowrap">
@@ -1230,7 +1231,7 @@
                                             </td>
                                             <td class="size-px whitespace-nowrap">
                                                 <div class="px-6 py-3 flex gap-1 items-center ">
-                                                    <span class="text-sm text-gray-500">11.00 - 13.00</span>
+                                                    <span class="text-sm text-gray-500">Resepsi</span>
                                                 </div>
                                             </td>
                                             <td class="h-px w-72 whitespace-nowrap">
