--- a/merid1/setting.html
+++ b/merid1/setting.html
@@ -126,8 +126,8 @@
                     <div class="capitalize mb-4 font-medium">
                         Tema Marlina
                     </div>
-                    <div class="grid md:grid-cols-2 gap-8">
-                        <div class="theme mx-auto">
+                    <div class="flex gap-8">
+                        <div class="theme ">
                             <div class="border-[7px] mr-auto prev-box border-black rounded-3xl w-[250px] no-scrollbar overflow-y-auto relative h-[450px]">
                                 <div class="absolute inset-0 z-10 bg-gradient-to-t from-black to-black/0 via-black/0 p-2">
                                     <div class="text-center  text-white absolute inset-x-0 bottom-5 ">
@@ -180,7 +180,7 @@
 
                             </div>
                         </div>
-                        <div class="grid gap-3 w-full ">
+                        <div class="grid gap-3 w-full max-w-sm">
 
                             <script src="https://ajax.googleapis.com/ajax/libs/webfont/1/webfont.js"></script>
                             <div class="grid  gap-4 h-fit">
@@ -1146,7 +1146,6 @@
                             </div>
                         </div>
                     </div>
-                </div>
 
                 <div class="max-md:flex-col flex justify-end items-center gap-2">
                     <a href="theme.html" class="py-2 max-md:w-full px-3 inline-flex mr-auto items-center gap-x-2 text-sm font-medium rounded-full border-theme-600 hover:border-transparent hover:text-white  hover:bg-theme-700 border-2 text-theme-600 shadow-2xs hover:bg-theme-50 focus:outline-hidden focus:bg-theme-50 disabled:opacity-50 disabled:pointer-events-none">
