--- a/merid1/setting.html
+++ b/merid1/setting.html
@@ -1204,4 +1204,4 @@
 <script>
     flatpickr(".datepicker", {dateFormat: "Y-m-d"});
 </script><!-- Font Picker --><!-- Preline --><script src="assets/js/preline.js"></script>
-<script src="node_modules/lodash/lodash.min.js"></script></body></html>
+<script src="assets/js/lodash.min.js"></script></body></html>
