--- a/merid1/tutorial.html
+++ b/merid1/tutorial.html
@@ -118,96 +118,20 @@
             <div class="w-full pt-10 px-4 sm:px-6 md:px-8 lg:ps-72 grid grid-cols-1 gap-6">
                 <div class=" grid gap-3 md:flex md:justify-between md:items-center ">
                     <h2 class="text-xl pt-3 font-semibold text-stone-700">
-                        Upgrade paket
+                       Tutorial
                     </h2>
                 </div>
                 <div class="bg-theme-100  rounded-xl p-4 pb-6 px-6 shadow-2xs overflow-hidden grid gap-4">
                     <div class="capitalize mb-4 font-medium">
-                        Pilih Tema
+                        Tambah Tamu
                     </div>
-
-                    <div role="tabpanel" class="w-full" aria-labelledby="">
-                        <fieldset
-                            class="grid sm:grid-cols-2 gap-3">
-                            <!-- Checkbox -->
-                            <label for="giga-6" class="py-4 px-4  ring-2 ring-theme-300 text-theme-700 rounded-lg cursor-pointer shadow-sm has-[:checked]:ring-2 has-[:checked]:ring-theme-700 ">
-                                <div class="flex items-center font-semibold justify-between">
-                                    <input type="radio" id="giga-6" value="giga-6" name="kontrak">
-                                    <span class="px-3 grow">
-                                        <span class="block">
-                                            Silver
-                                        </span>
-                                        <span class="block text-sm font-normal text-theme-500">
-                                            2 Minggu
-                                        </span>
-                                    </span>
-                                    <span class="block harga-paket text-orange-600">
-                                        Free
-                                    </span>
-                                </div>
-                                <hr class="my-3 border-theme-200/50">
-                                <ul class="list-disc text-left text-stone-500 list-inside text-sm">
-                                    <li>Ragam Pilihan Template &amp; Warna</li>
-                                    <li>Countdown ke Waktu Acara</li>
-                                    <li>Profil Bride &amp; Groom</li>
-                                    <li>Galeri Foto</li>
-                                    <li>Rincian Acara</li>
-                                    <li>Peta Lokasi</li>
-                                    <li>Fitur Daftar Undangan</li>
-                                    <li><del class="text-stone-400">Fitur Broadcast Undangan</del>
-                                    </li>
-                                    <li><del class="text-stone-400">Fitur RSVP</del>
-                                    </li>
-                                    <li><del class="text-stone-400">Hadiah</del>
-                                    </li>
-                                    <li>Website Aktif Selama 2 Minggu</li>
-                                </ul>
-                            </label>
-                            <!-- End Checkbox -->
-                            <!-- Checkbox -->
-                            <label for="giga-12" class="py-4 px-4  ring-2 ring-theme-300 text-theme-700 rounded-lg cursor-pointer shadow-sm has-[:checked]:ring-2 has-[:checked]:ring-theme-700 ">
-                                <div class="flex items-center font-semibold justify-between">
-                                    <input type="radio" id="giga-12" value="giga-12" name="kontrak">
-                                    <span class="px-3 grow">
-                                        <span class="block">
-                                            Gold
-                                        </span>
-                                        <span class="block text-sm font-normal text-theme-500">
-                                            6 Bulan
-                                        </span>
-                                    </span>
-                                    <span class="block harga-paket text-orange-600">
-                                        Rp249.000,-
-                                    </span>
-                                </div>
-                                <hr class="my-3 border-theme-200/50">
-                                <ul class="list-disc text-left text-stone-500 list-inside text-sm">
-                                    <li>Ragam Pilihan Template &amp; Warna</li>
-                                    <li>Countdown ke Waktu Acara</li>
-                                    <li>Profil Bride &amp; Groom</li>
-                                    <li>Galeri Foto</li>
-                                    <li>Rincian Acara</li>
-                                    <li>Peta Lokasi</li>
-                                    <li>Fitur Daftar Undangan</li>
-                                    <li>Fitur Broadcast Undangan
-                                    </li>
-                                    <li>Fitur RSVP
-                                    </li>
-                                    <li>Hadiah
-                                    </li>
-                                    <li>Website Aktif Selama 6 Bulan</li>
-                                </ul>
-                            </label>
-                            <!-- End Checkbox -->
-
-                        </fieldset>
+<iframe class="w-full aspect-video rounded-lg" src="https://www.youtube.com/watch?v=JB9pDUFM6Y0&ab_channel=LeonHartono"></iframe>
+                </div>
+                 <div class="bg-theme-100  rounded-xl p-4 pb-6 px-6 shadow-2xs overflow-hidden grid gap-4">
+                    <div class="capitalize mb-4 font-medium">
+                        Setting Tema
                     </div>
-
-                    <div class="flex justify-end items-center gap-x-2">
-                        <button type="button" class="py-2 px-3 inline-flex items-center gap-x-2 text-sm font-medium rounded-full border border-transparent bg-orange-700/80 text-white hover:bg-orange-700 focus:outline-hidden focus:bg-orange-700 disabled:opacity-50 disabled:pointer-events-none">
-                            Save changes
-                        </button>
-                    </div>
+<iframe class="w-full aspect-video rounded-lg" src="https://www.youtube.com/watch?v=0SAMW40fS1I&ab_channel=Astronacci"></iframe>
                 </div>
 
 
