--- a/merid1/setting.html
+++ b/merid1/setting.html
@@ -72,7 +72,7 @@
                                     </a>
                                 </li>
                                 <li>
-                                    <a class="w-full flex items-center gap-x-3.5 py-2 px-2.5 text-sm  rounded-lg hover:bg-theme-600/10 focus:outline-hidden focus:bg-gray-100" href="https://www.youtube.com/" target="_blank">
+                                    <a class="w-full flex items-center gap-x-3.5 py-2 px-2.5 text-sm  rounded-lg hover:bg-theme-600/10 focus:outline-hidden focus:bg-gray-100" href="tutorial.html" target="_blank">
                                         <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewbox="0 0 24 24" stroke-width="2" stroke="currentColor" class="size-6 text-stone-400">
                                             <path stroke-linecap="round" stroke-linejoin="round" d="m15.75 10.5 4.72-4.72a.75.75 0 0 1 1.28.53v11.38a.75.75 0 0 1-1.28.53l-4.72-4.72M4.5 18.75h9a2.25 2.25 0 0 0 2.25-2.25v-9a2.25 2.25 0 0 0-2.25-2.25h-9A2.25 2.25 0 0 0 2.25 7.5v9a2.25 2.25 0 0 0 2.25 2.25Z"/>
                                         </svg>
