--- a/merid1/tutorial.html
+++ b/merid1/tutorial.html
@@ -94,13 +94,13 @@
                                     </a>
                                 </li>
                                 <!-- <li>
-                                                                                                                                                                                                                                                                                                                                    <a class="w-full flex items-center gap-x-3.5 py-2 px-2.5 text-sm  rounded-lg hover:bg-theme-600/10 focus:outline-hidden focus:bg-gray-100" href="order.html">
-                                                                                                                                                                                                                                                                                                                                        <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewbox="0 0 24 24" stroke-width="2" stroke="currentColor" class="size-6 text-stone-400">
-                                                                                                                                                                                                                                                                                                                                            <path stroke-linecap="round" stroke-linejoin="round" d="M2.25 18.75a60.07 60.07 0 0 1 15.797 2.101c.727.198 1.453-.342 1.453-1.096V18.75M3.75 4.5v.75A.75.75 0 0 1 3 6h-.75m0 0v-.375c0-.621.504-1.125 1.125-1.125H20.25M2.25 6v9m18-10.5v.75c0 .414.336.75.75.75h.75m-1.5-1.5h.375c.621 0 1.125.504 1.125 1.125v9.75c0 .621-.504 1.125-1.125 1.125h-.375m1.5-1.5H21a.75.75 0 0 0-.75.75v.75m0 0H3.75m0 0h-.375a1.125 1.125 0 0 1-1.125-1.125V15m1.5 1.5v-.75A.75.75 0 0 0 3 15h-.75M15 10.5a3 3 0 1 1-6 0 3 3 0 0 1 6 0Zm3 0h.008v.008H18V10.5Zm-12 0h.008v.008H6V10.5Z"/>
-                                                                                                                                                                                                                                                                                                                                        </svg>
-                                                                                                                                                                                                                                                                                                                                        Transaksi
-                                                                                                                                                                                                                                                                                                                                    </a>
-                                                                                                                                                                                                                                                                                                                                </li> -->
+                                                                                                                                                                                                                                                                                                                                                                                                                                    <a class="w-full flex items-center gap-x-3.5 py-2 px-2.5 text-sm  rounded-lg hover:bg-theme-600/10 focus:outline-hidden focus:bg-gray-100" href="order.html">
+                                                                                                                                                                                                                                                                                                                                                                                                                                        <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewbox="0 0 24 24" stroke-width="2" stroke="currentColor" class="size-6 text-stone-400">
+                                                                                                                                                                                                                                                                                                                                                                                                                                            <path stroke-linecap="round" stroke-linejoin="round" d="M2.25 18.75a60.07 60.07 0 0 1 15.797 2.101c.727.198 1.453-.342 1.453-1.096V18.75M3.75 4.5v.75A.75.75 0 0 1 3 6h-.75m0 0v-.375c0-.621.504-1.125 1.125-1.125H20.25M2.25 6v9m18-10.5v.75c0 .414.336.75.75.75h.75m-1.5-1.5h.375c.621 0 1.125.504 1.125 1.125v9.75c0 .621-.504 1.125-1.125 1.125h-.375m1.5-1.5H21a.75.75 0 0 0-.75.75v.75m0 0H3.75m0 0h-.375a1.125 1.125 0 0 1-1.125-1.125V15m1.5 1.5v-.75A.75.75 0 0 0 3 15h-.75M15 10.5a3 3 0 1 1-6 0 3 3 0 0 1 6 0Zm3 0h.008v.008H18V10.5Zm-12 0h.008v.008H6V10.5Z"/>
+                                                                                                                                                                                                                                                                                                                                                                                                                                        </svg>
+                                                                                                                                                                                                                                                                                                                                                                                                                                        Transaksi
+                                                                                                                                                                                                                                                                                                                                                                                                                                    </a>
+                                                                                                                                                                                                                                                                                                                                                                                                                                </li> -->
                                 <li>
                                     <a class="w-full flex items-center gap-x-3.5 py-2 px-2.5 text-sm  rounded-lg hover:bg-theme-600/10 focus:outline-hidden focus:bg-gray-100" href="login.html">
                                         <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewbox="0 0 24 24" stroke-width="2" stroke="currentColor" class="size-6 text-stone-400">
@@ -118,25 +118,26 @@
             <div class="w-full pt-10 px-4 sm:px-6 md:px-8 lg:ps-72 grid grid-cols-1 gap-6">
                 <div class=" grid gap-3 md:flex md:justify-between md:items-center ">
                     <h2 class="text-xl pt-3 font-semibold text-stone-700">
-                       Tutorial
+                        Tutorial
                     </h2>
                 </div>
                 <div class="bg-theme-100  rounded-xl p-4 pb-6 px-6 shadow-2xs overflow-hidden grid gap-4">
                     <div class="capitalize mb-4 font-medium">
                         Tambah Tamu
                     </div>
-<iframe class="w-full aspect-video rounded-lg" src="https://www.youtube.com/watch?v=JB9pDUFM6Y0&ab_channel=LeonHartono"></iframe>
+                    <iframe class="w-full aspect-video rounded-lg" src="https://www.youtube.com/embed/SJXgyXqBM7U" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+
                 </div>
-                 <div class="bg-theme-100  rounded-xl p-4 pb-6 px-6 shadow-2xs overflow-hidden grid gap-4">
+                <div class="bg-theme-100  rounded-xl p-4 pb-6 px-6 shadow-2xs overflow-hidden grid gap-4">
                     <div class="capitalize mb-4 font-medium">
                         Setting Tema
                     </div>
-<iframe class="w-full aspect-video rounded-lg" src="https://www.youtube.com/watch?v=0SAMW40fS1I&ab_channel=Astronacci"></iframe>
+                    <iframe class="w-full aspect-video rounded-lg" src="https://www.youtube.com/embed/14mywGZq84E" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
                 </div>
 
 
                 <!-- <input
-                                                                                                                                                                                                        id="datepicker" type="text" class="hs-input w-full border rounded-md p-2" placeholder="Pilih tanggal"> -->
+                                                                                                                                                                                                                                                        id="datepicker" type="text" class="hs-input w-full border rounded-md p-2" placeholder="Pilih tanggal"> -->
 
                 <div id="hs-basic-modal" class="hs-overlay hs-overlay-open:opacity-100 hs-overlay-open:duration-500 hidden size-full fixed top-0 start-0 z-10 opacity-0 overflow-x-hidden transition-all overflow-y-auto pointer-events-none" role="dialog" tabindex="-1" aria-labelledby="hs-basic-modal-label">
                     <div class="sm:max-w-lg sm:w-full m-3 sm:mx-auto">
